buildscript {
    repositories {
        jcenter()
        maven { url = "http://files.minecraftforge.net/maven" }
    }
    dependencies {
        classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
    }
}
apply plugin: 'net.minecraftforge.gradle.forge'
//Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.


version = "1.12.2-1.4.10.10"
group = "com.vandendaelen.handles" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
archivesBaseName = "handles"

sourceCompatibility = targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
compileJava {
    sourceCompatibility = targetCompatibility = '1.8'
}

minecraft {
    version = "1.12.2-14.23.5.2768"
    runDir = "run"
    
    // the mappings can be changed at any time, and must be in the following format.
    // snapshot_YYYYMMDD   snapshot are built nightly.
    // stable_#            stables are built at the discretion of the MCP team.
    // Use non-default mappings at your own risk. they may not always work.
    // simply re-run your setup task after changing the mappings to update your workspace.
    mappings = "stable_39"
    // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
}

repositories {
    maven {
        name = "JitPack"
        url = "https://jitpack.io"
    }

    // ComputerCraft
    maven { url "https://cc.crzd.me/maven/" }

    // OpenComputer
    maven {
       name = "OC repo"
       url = "http://maven.cil.li/"
    }

    maven {
        name = "IC2"
        url = "http://maven.ic2.player.to"
    }
}

dependencies {
    //OC
    compile "li.cil.oc:OpenComputers:MC1.12.2-1.7.+"
    //CC
    compile "dan200.computercraft:ComputerCraft:${project.cc_version}-${project.cc_build}"
    //TARDIS Mod
    deobfCompile "com.github.Spectre0987:TardisMod:${project.tardis_version}"
    //IC²
    compileOnly "net.industrial-craft:industrialcraft-2:${project.ic2ex_version}:api"
}

processResources {
    // this will ensure that this task is redone when the versions change.
    inputs.property "version", project.version
    inputs.property "mcversion", project.minecraft.version

    // replace stuff in mcmod.info, nothing else
    from(sourceSets.main.resources.srcDirs) {
        include 'mcmod.info'
                
        // replace version and mcversion
        expand 'version':project.version, 'mcversion':project.minecraft.version
    }
        
    // copy everything else except the mcmod.info
    from(sourceSets.main.resources.srcDirs) {
        exclude 'mcmod.info'
    }
}
